<resources>
    <string name="app_name">BillApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_account">Create account</string>
    <string name="company_name">Company name</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="loading">Loading...</string>
</resources>