<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/edit_text"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">


                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/App_color"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/edit_text"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textSize="16dp" />

                <CheckBox
                    android:id="@+id/chkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/App_color"
                    android:checked="true"
                    android:text="Remember me"
                    android:textColor="@color/App_color" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/App_color"
                    android:text="@string/login"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:text="@string/not_yet_registered_signup_now"
            android:textAlignment="center"
            android:textColor="@color/App_color"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>